--- a/src/app/core/login/login.component.scss
+++ b/src/app/core/login/login.component.scss
@@ -7,12 +7,12 @@
   position: absolute;
   right: 0;
   margin-right: 30px;
-  form {
+  .form-login {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    span {
+    .form-title {
       color: #de8f75;
       font-weight: bold;
     }
@@ -23,7 +23,7 @@
     margin-top: 15px;
   }
 
-  input {
+  .form-input {
     padding: 5px;
     outline: none;
     border: none;
@@ -34,7 +34,7 @@
     }
   }
 
-  button {
+  .form-btn {
     background: #de8f75;
     padding: 5px;
     border: none;
