--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -11,13 +11,13 @@
     </ul>
     <ul class="navbar__list navbar__list--center">
       <li class="navbar__item">
-        <a routerLink="/" class="navbar__link">SAPATOS</a>
+        <a [routerLink]="['/product/list', 'sapatos']" class="navbar__link">SAPATOS</a>
       </li>
       <li class="navbar__item">
-        <a routerLink="/" class="navbar__link">BOLSAS</a>
+        <a [routerLink]="['/product/list', 'bolsas']" class="navbar__link">BOLSAS</a>
       </li>
       <li class="navbar__item">
-        <a routerLink="/" class="navbar__link">ACESSÓRIOS</a>
+        <a [routerLink]="['/product/list', 'acessorios']" class="navbar__link">ACESSÓRIOS</a>
       </li>
       <li class="navbar__item">
         <a routerLink="/" class="navbar__link">OFF</a>
