feat(footer): initial responsive added

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -3,11 +3,6 @@
 
 
   <div class="footer-top">
-
-    <div class="footer-newletter">
-      <h3 class="footer-newletter__title">Asssine nosso news</h3>
-    </div>
-
     <div class="footer-top__container">
       <div class="footer-top__social">
         <a href="#" class="footer-top__social__link" target="_blank">
@@ -25,10 +20,6 @@
         <ul class="footer-top__list">
           <li class="footer-top__item">
             <img src="./assets/img/vtex.svg" alt="vtex">
-          </li>
-        </ul>
-        <ul class="footer-top__list">
-          <li class="footer-top__item">
             <img src="./assets/img/selo-ebit.svg" alt="selo ebit">
           </li>
         </ul>
@@ -76,6 +67,10 @@
         </ul>
       </div>
     </div>
+
+    <div class="footer-newsletter">
+      <h3 class="footer-newsletter__title">Asssine nosso news</h3>
+    </div>
   </div>
 
   <div class="footer-bottom">
@@ -88,4 +83,7 @@
       <img class="footer-bottom__image" src="./assets/img/logo-white.svg" alt="logo original">
     </div>
   </div>
+
+
+
 </footer>
