--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -73,17 +73,6 @@
     </div>
   </div>
 
-  <div class="footer-bottom">
-    <div class="footer-bottom__container">
-      <p class="footer-bottom__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie massa in
-        nunc condimentum, vel
-        placerat lacus pulvinar. Suspendisse vel nisl eu tortor feugiat tempus vel in tortor. Nunc semper leo nec tellus
-        gravida faucibus. </p>
-
-      <img class="footer-bottom__image" src="./assets/img/logo-white.svg" alt="logo original">
-    </div>
-  </div>
-
-
+  <app-footer-bottom></app-footer-bottom>
 
 </footer>
