--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -20,7 +20,7 @@
         <a [routerLink]="['/product/list', 'acessorios']" class="navbar__link">ACESSÓRIOS</a>
       </li>
       <li class="navbar__item">
-        <a routerLink="/" class="navbar__link">OFF</a>
+        <a [routerLink]="['/product/list', 'off']" class="navbar__link">OFF</a>
       </li>
     </ul>
     <ul class="navbar__list navbar__list--right">
