--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap');
+@import '~src/assets/styles/mixins';
 
 * {
   padding: 0;
@@ -16,4 +17,83 @@ ul {
 
 button {
   cursor: pointer;
+}
+
+/* ----------------
+* form
+---------------- */
+
+::-webkit-input-placeholder {
+  font-size: rem(12);
+  color: rgba(32, 32, 32, 0.5);
+  font-family: Montserrat, 'sans-serif';
+}
+
+:-ms-input-placeholder {
+  font-size: rem(12);
+  color: rgba(32, 32, 32, 0.5);
+  font-family: Montserrat, 'sans-serif';
+}
+
+::placeholder {
+  font-size: rem(12);
+  color: rgba(32, 32, 32, 0.5);
+  font-family: Montserrat, 'sans-serif';
+}
+
+.form {
+  &__input {
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #aeb6c1;
+    font-size: rem(14);
+    padding: rem(5) 0;
+    padding-top: rem(16);
+  }
+
+  &-group {
+    position: relative;
+    margin-bottom: rem(16);
+  }
+
+  &__message {
+    font-size: rem(12);
+  }
+
+  &__label {
+    position: absolute;
+    top: 0;
+    font-size: rem(12);
+    color: rgba(32, 32, 32, 0.5);
+    display: block;
+    transition: all 0.3s;
+  }
+
+  &__input:placeholder-shown + &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(4rem);
+  }
+}
+
+/* ----------------
+* button
+---------------- */
+
+.button {
+  display: block;
+  padding: rem(15) rem(20);
+  font-size: rem(14);
+  color: #fff;
+  border: none;
+  border-radius: rem(3);
+
+  &--primary {
+    background: #de8f75;
+  }
+
+  &--center {
+    margin: 0 auto;
+  }
 }
