--- a/src/app/modules/product/product-off/product-off.component.scss
+++ b/src/app/modules/product/product-off/product-off.component.scss
@@ -4,8 +4,11 @@
 
     &__container {
         display: flex;
-        justify-content: left;
+        justify-content: center;
+        flex-wrap: wrap;
+        flex-direction: row;
         width: 90%;
+        min-height: rem(430);
         margin: rem(12) auto;
     }
 
